--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
                 <img src="./logo-removebg-preview.png" alt="logo">
             </div>
             <div id="options">
-                <a href="#">Home</a><a href="#">About</a><a href="#">Resume</a><a href="#">Portfolio</a><a href="#">Contact</a>
-                <a href="#" class="icon" >
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Resume</a>
+                <a href="#">Portfolio</a>
+                <a href="#">Contact</a>
+                <a href="#" class="icon">
                     <i class="fa fa-bars"></i>
-                  </a>
+                </a>
             </div>
+            
         </div>
         <div id="main-container">
             <div id="left-container">
